--- a/header.html
+++ b/header.html
@@ -86,7 +86,7 @@
                 <form>
                     <input id="unos1" type="email" placeholder="Email" autofocus>
                     <input id="unos2" type="password" placeholder="Lozinka">
-                    <button id="submitlogin" type="submit">Prijavi se</button><br>
+                    <button id="submitlogin" type="submit"> <a href="korisnički račun.html" class = "nelink">Prijavi se</a></button><br>
                     <label><a href="zaboravljena sifra.html" class="forgot" id="textlabele">Zaboravili ste
                             lozinku?</a></label>
                 </form>
@@ -106,7 +106,7 @@
                     <input type="email" placeholder="Email" id="email" />
                     <input type="password" placeholder="Lozinka" id="lozinka" />
                     <input type="number" placeholder="Broj telefona" id="brojtel" />
-                    <button id="submitregistracija">Registriraj se</button>
+                    <button id="submitregistracija"><a href="korisnički račun.html" class="nelink">Registriraj se</a></button>
                 </form>
             </div>
         </div>
