--- a/apartman family.html
+++ b/apartman family.html
@@ -4,56 +4,55 @@
     <head>
         <meta charset="UTF-8">
         <script src="https://morgan3d.github.io/include.js/include.min.js"></script>
-        <link rel="stylesheet" href="Soba Standard.css">
+        <link rel="stylesheet" href="Apartman Family.css">
         <script src = "skripta_login_registracija.js"></script>
-        <title>Soba Standard</title>
+        <title>Apartman Family</title>
     </head>
 
     <body>
         <include src="header.html"></include>
         <div id="pozadina">
             <div>
-                <h1 id="naslovAS">Soba Standard</h1>
+                <h1 id="naslovAS">Apartman Family</h1>
                 <div id="rezAS"><a href="rezervacija.html" id="linkAS">Rezerviši</a></div>
 
             </div>
 
         </div>
         <div>
-            <h1 class="titleAS">Opis sobe</h1>
+            <h1 class="titleAS">Opis apartmana</h1>
 
             <p id="paragraf">
-                Sobe ugodnog funkcionalnog prostora i dizajna s modernom elegancijom, osmišljene da zadovolje duge i
-                kratke odmore.
-                <br> Pružaju spokojan i udoban prostor nakon sadržajnog i aktivnog dana.
+                Ako ste u potrazi za još više prostora i fleksibilnosti, opcija sa dvije spavaće sobe je za vas.<br>
+                Dodajte jednu sobu za goste uz našu jednu spavaću sobu.<br>
+                Ovaj elegantan i prostrani paket predstavlja dosta mjesta za vaše ukućane, te za okupljanje i bogatije
+                dnevne avanture.
             </p>
         </div>
 
         <div>
-            <h1 class="titleAS pomjeri">Galerija sobe</h1>
-            <div id = "grid1">
-                <img src="image/Sobastandard/soba-standard-1.jpg" width="756" height="390">
-                <img src="image/Sobastandard/soba-standard-2.jpg" width="756" height="390">
-                <img src="image/Sobastandard/apartman-studio-4.jpg" width="756" height="390">
-                <img src="image/Sobastandard/apartman-family-3.jpg" width="756" height="390">
+            <h1 class="pomjeri titleAS">Galerija apartmana</h1>
+            <div id = "margina">
+                <img src="image/Apartmanfamily/apartman-family-1.jpg" width="503" height="400">
+                <img src="image/Apartmanstudio/apartman-studio-2.jpg" width="503" height="400">
+                <img src="image/Apartmanstudio/apartman-studio-4.jpg" width="503" height="400">
             </div>
 
         </div>
 
         <div>
-            <h1 class="titleAS pomjeri">Sadržaj sobe</h1>
+            <h1 class="pomjeri titleAS">Sadržaj apartmana</h1>
             <div id="grid">
 
                 <div>
                     <p class="paragrafi">
-                        Flat screen satelitski 1HD TV<br>
+                        Flat screen satelitski 2HD TV<br>
                         Besplatni bežični pristup internetu<br>
-                        Dva razdvojena kreveta<br>
-                        Club garnitura<br>
+                        Dvije spavaće sobe<br>
                         Kupatilo<br>
                         Mini bar<br>
                         Telefon<br>
-                        Besplatan sef<br>
+                        Besplatan sef
                     </p>
                 </div>
                 <div>
@@ -64,7 +63,8 @@
                         24 satna usluga<br>
                         Usluga pranja odjeće<br>
                         Usluga hemijskog čišćenja<br>
-                        Osoba: 2 +<br>
+                        Osoba: 4 + 1
+
                     </p>
                 </div>
             </div>
