--- a/soba comfort.html
+++ b/soba comfort.html
@@ -4,16 +4,16 @@
     <head>
         <meta charset="UTF-8">
         <script src="https://morgan3d.github.io/include.js/include.min.js"></script>
-        <link rel="stylesheet" href="Soba Standard.css">
+        <link rel="stylesheet" href="Soba Comfort.css">
         <script src = "skripta_login_registracija.js"></script>
-        <title>Soba Standard</title>
+        <title> Soba Comfort</title>
     </head>
 
     <body>
         <include src="header.html"></include>
         <div id="pozadina">
             <div>
-                <h1 id="naslovAS">Soba Standard</h1>
+                <h1 id="naslovAS">Soba Comfort</h1>
                 <div id="rezAS"><a href="rezervacija.html" id="linkAS">Rezerviši</a></div>
 
             </div>
@@ -23,19 +23,19 @@
             <h1 class="titleAS">Opis sobe</h1>
 
             <p id="paragraf">
-                Sobe ugodnog funkcionalnog prostora i dizajna s modernom elegancijom, osmišljene da zadovolje duge i
-                kratke odmore.
-                <br> Pružaju spokojan i udoban prostor nakon sadržajnog i aktivnog dana.
+                Sobe dizajnirane s modernom elegancijom, visokim stropovima, velikim prozorima i prostranim ulaznim
+                foajeom, donose spokojan i udoban prostor u kojem se može započeti istinski odmor.
             </p>
         </div>
 
         <div>
             <h1 class="titleAS pomjeri">Galerija sobe</h1>
-            <div id = "grid1">
-                <img src="image/Sobastandard/soba-standard-1.jpg" width="756" height="390">
-                <img src="image/Sobastandard/soba-standard-2.jpg" width="756" height="390">
+            <div id = "margin">
+                <img src="image/Sobacomfort/soba-comfort-1.jpg" width="756" height="390">
+                <img src="image/Sobacomfort/soba-comfort-2.jpg" width="756" height="390">
                 <img src="image/Sobastandard/apartman-studio-4.jpg" width="756" height="390">
-                <img src="image/Sobastandard/apartman-family-3.jpg" width="756" height="390">
+                <img src="image/Sobacomfort/apartman-family-3.jpg" width="756" height="390">
+
             </div>
 
         </div>
@@ -48,23 +48,25 @@
                     <p class="paragrafi">
                         Flat screen satelitski 1HD TV<br>
                         Besplatni bežični pristup internetu<br>
-                        Dva razdvojena kreveta<br>
+                        Krevet 1-2 osobe (kraljevski)<br>
                         Club garnitura<br>
                         Kupatilo<br>
                         Mini bar<br>
                         Telefon<br>
-                        Besplatan sef<br>
+                        Besplatan sef
                     </p>
                 </div>
                 <div>
                     <p class="paragrafi">
                         Ormarić za skije<br>
-                        Osiguran parking<br>
+                        Osiguran parking <br>
                         Usluge sa VIP tretmanom<br>
                         24 satna usluga<br>
                         Usluga pranja odjeće<br>
                         Usluga hemijskog čišćenja<br>
-                        Osoba: 2 +<br>
+                        Osoba: 2 + 1
+
+
                     </p>
                 </div>
             </div>
